--- a/bin/application/EffortLoggerV2GUIPrototype.fxml
+++ b/bin/application/EffortLoggerV2GUIPrototype.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EffortConsole">
    <children>
-      <Button layoutX="14.0" layoutY="353.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Effort Log Editior">
+      <Button layoutX="14.0" layoutY="353.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Effort Log Editior" onAction="#showEffortLogEditor">
          <font>
             <Font size="12.0" />
          </font>
@@ -30,10 +30,10 @@
             <Font size="12.0" />
          </font>
       </Button>
-      <ChoiceBox layoutX="43.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" />
-      <ChoiceBox layoutX="43.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" />
-      <ChoiceBox layoutX="318.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" />
-      <ChoiceBox layoutX="318.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" />
+      <ChoiceBox layoutX="43.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" fx:id="Projects"/>
+      <ChoiceBox layoutX="43.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" fx:id="LifeCycleSteps"/>
+      <ChoiceBox layoutX="318.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" fx:id="EffortCategories"/>
+      <ChoiceBox layoutX="318.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" fx:id="Deliverables"/>
       <Button layoutX="198.0" layoutY="98.0" mnemonicParsing="false" text="Start Activity" onAction="#startActivity"/>
       <Text layoutX="126.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EffortLoggerV2 Console" textAlignment="CENTER" underline="true" wrappingWidth="384.21630859375">
          <font>
@@ -59,7 +59,7 @@
             <Font name="System Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox layoutX="43.0" layoutY="312.0" prefHeight="25.0" prefWidth="132.0" />
+      <ChoiceBox layoutX="43.0" layoutY="312.0" prefHeight="25.0" prefWidth="132.0" fx:id="PlanningPokerCards"/>
       <Text layoutX="42.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Amount of Cards:" />
       <Text layoutX="42.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EffortLog">
          <font>
