--- a/bin/application/EffortLoggerV2GUIPrototype.fxml
+++ b/bin/application/EffortLoggerV2GUIPrototype.fxml
@@ -6,16 +6,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EffortConsole">
    <children>
-      <Button layoutX="14.0" layoutY="353.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Effort Log Editior" onAction="#showEffortLogEditor">
+      <Button layoutX="14.0" layoutY="353.0" mnemonicParsing="false" onAction="#showEffortLogEditor" prefHeight="25.0" prefWidth="130.0" text="Effort Log Editior">
          <font>
             <Font size="12.0" />
          </font>
       </Button>
-      <Button layoutX="317.0" layoutY="98.0" mnemonicParsing="false" text="Stop Activity" onAction="#stopActivity"/>
-      <Button layoutX="156.0" layoutY="355.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Defect Log Console">
+      <Button layoutX="317.0" layoutY="98.0" mnemonicParsing="false" onAction="#stopActivity" text="Stop Activity" />
+      <Button fx:id="defectLogButton" layoutX="156.0" layoutY="355.0" mnemonicParsing="false" onAction="#changeScene" prefHeight="25.0" prefWidth="130.0" text="Defect Log Console">
          <font>
             <Font size="12.0" />
          </font>
@@ -30,17 +29,17 @@
             <Font size="12.0" />
          </font>
       </Button>
-      <ChoiceBox layoutX="43.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" fx:id="Projects"/>
-      <ChoiceBox layoutX="43.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" fx:id="LifeCycleSteps"/>
-      <ChoiceBox layoutX="318.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" fx:id="EffortCategories"/>
-      <ChoiceBox layoutX="318.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" fx:id="Deliverables"/>
-      <Button layoutX="198.0" layoutY="98.0" mnemonicParsing="false" text="Start Activity" onAction="#startActivity"/>
-      <Text layoutX="126.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EffortLoggerV2 Console" textAlignment="CENTER" underline="true" wrappingWidth="384.21630859375">
+      <ChoiceBox fx:id="Projects" layoutX="43.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" />
+      <ChoiceBox fx:id="LifeCycleSteps" layoutX="43.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" />
+      <ChoiceBox fx:id="EffortCategories" layoutX="318.0" layoutY="170.0" prefHeight="25.0" prefWidth="239.0" />
+      <ChoiceBox fx:id="Deliverables" layoutX="318.0" layoutY="223.0" prefHeight="25.0" prefWidth="239.0" />
+      <Button layoutX="198.0" layoutY="98.0" mnemonicParsing="false" onAction="#startActivity" text="Start Activity" />
+      <Text layoutX="108.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EffortLoggerV2 Console" textAlignment="CENTER" underline="true" wrappingWidth="384.21630859375">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Text>
-      <Text fill="RED" layoutX="188.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clock Stopped" textAlignment="CENTER" wrappingWidth="260.8515625" fx:id="clockStatus">
+      <Text fx:id="clockStatus" fill="RED" layoutX="170.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clock Stopped" textAlignment="CENTER" wrappingWidth="260.8515625">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -59,7 +58,7 @@
             <Font name="System Italic" size="14.0" />
          </font>
       </Text>
-      <ChoiceBox layoutX="43.0" layoutY="312.0" prefHeight="25.0" prefWidth="132.0" fx:id="PlanningPokerCards"/>
+      <ChoiceBox fx:id="PlanningPokerCards" layoutX="43.0" layoutY="312.0" prefHeight="25.0" prefWidth="132.0" />
       <Text layoutX="42.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Amount of Cards:" />
       <Text layoutX="42.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EffortLog">
          <font>
