--- a/src/application/EffortLoggerV2GUIPrototype.fxml
+++ b/src/application/EffortLoggerV2GUIPrototype.fxml
@@ -66,5 +66,12 @@
             <Font size="14.0" />
          </font>
       </Text>
+       <Text layoutX="242.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Historical Data:"/>
+      <TextField layoutX="242.0" layoutY="312.0" prefHeight="25.0" prefWidth="239.0" fx:id="searchBar"/>
+      <Button layoutX="488.0" layoutY="312.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Search">
+      	<font>
+      		<Font size ="10.0"/>
+      	</font>
+      </Button>
    </children>
 </AnchorPane>
