Added functionality for EffortLogEditor

--- a/src/application/EffortLogEditor.fxml
+++ b/src/application/EffortLogEditor.fxml
@@ -31,10 +31,10 @@
             <Font size="12.0" />
          </font>
       </Button>
-      <ChoiceBox fx:id="Projects" layoutX="46.0" layoutY="61.0" prefHeight="26.0" prefWidth="334.0" />
-      <ChoiceBox fx:id="LifeCycleSteps" layoutX="46.0" layoutY="123.0" prefHeight="26.0" prefWidth="524.0" />
-      <ChoiceBox fx:id="EffortCategories" layoutX="329.0" layoutY="225.0" prefHeight="26.0" prefWidth="206.0" />
-      <ChoiceBox fx:id="Deliverables" layoutX="46.0" layoutY="226.0" prefHeight="25.0" prefWidth="239.0" />
+      <ChoiceBox layoutX="46.0" layoutY="61.0" prefHeight="26.0" prefWidth="334.0" fx:id="Projects"/>
+      <ChoiceBox  layoutX="46.0" layoutY="123.0" prefHeight="26.0" prefWidth="524.0" fx:id="EffortLogs"/>
+      <ChoiceBox  layoutX="329.0" layoutY="225.0" prefHeight="26.0" prefWidth="206.0" fx:id="EffortCategories"/>
+      <ChoiceBox layoutX="46.0" layoutY="226.0" prefHeight="25.0" prefWidth="239.0" fx:id="LifeCycleSteps" />
       <Text layoutX="126.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Effort Log Editor" textAlignment="CENTER" underline="true" wrappingWidth="384.21630859375">
          <font>
             <Font name="System Bold" size="24.0" />
@@ -49,19 +49,14 @@
             <Font size="10.0" />
          </font>
       </Text>
-      <Text layoutX="48.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No effort log entries for thie project">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Text>
-      <TextField layoutX="81.0" layoutY="171.0" prefHeight="26.0" prefWidth="92.0" text="yyyy-mm-dd" />
-      <TextField layoutX="253.0" layoutY="170.0" prefHeight="26.0" prefWidth="92.0" text="hh:mm:ss" />
-      <TextField layoutX="424.0" layoutY="170.0" prefHeight="26.0" prefWidth="92.0" text="hh:mm:ss" />
+      <TextField layoutX="81.0" layoutY="171.0" prefHeight="26.0" prefWidth="92.0" text="yyyy-mm-dd" fx:id="Date"/>
+      <TextField layoutX="253.0" layoutY="170.0" prefHeight="26.0" prefWidth="92.0" text="hh:mm:ss" fx:id="StartTime"/>
+      <TextField layoutX="424.0" layoutY="170.0" prefHeight="26.0" prefWidth="92.0" text="hh:mm:ss" fx:id="EndTime"/>
       <Label layoutX="51.0" layoutY="175.0" prefHeight="18.0" prefWidth="39.0" text="Date:" />
       <Label layoutX="192.0" layoutY="175.0" prefHeight="18.0" prefWidth="62.0" text="Start Time:" />
       <Label layoutX="361.0" layoutY="175.0" prefHeight="18.0" prefWidth="62.0" text="Stop Time:" />
-      <ChoiceBox fx:id="EffortCategories1" layoutX="45.0" layoutY="273.0" prefHeight="26.0" prefWidth="334.0" />
-      <Button layoutX="401.0" layoutY="273.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="138.0" text="Update this Entry" />
+      <ChoiceBox layoutX="45.0" layoutY="273.0" prefHeight="26.0" prefWidth="334.0" fx:id="Deliverables" />
+      <Button layoutX="401.0" layoutY="273.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="138.0" text="Update this Entry" onAction="#updateLog"/>
       <Button layoutX="45.0" layoutY="324.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="138.0" text="Delete this Entry" />
       <Button layoutX="198.0" layoutY="324.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="182.0" text="Split this Entry into Two Entries" />
       <Button layoutX="392.0" layoutY="324.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="182.0" text="Proceed to Effort Log Console" />
